@@ -1,3 +1,7 @@
+2007-03-27  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/reporter.c: Ouput quoted diskname in "DUMP SUMMARY"
+	  section.
+
 2007-02-22  Jean-Louis Martineau <martineau@zmanda.com>
 	* changer-src/scsi-linux.c, common-src/security-util.c,
 	  common-src/stream.c, oldrecover-src/amrecover.c,
